--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
       - run: flutter pub get
       
       - run: flutter build apk --debug --split-per-abi
+      - run: flutter build apk
       
       - name: Push to Releases
         uses: ncipollo/release-action@v1
