--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,13 @@ dependencies:
   firebase_core: ^2.14.0
   flutter_svg: ^2.0.5
   cloud_firestore: ^4.8.2
+  camera: ^0.10.0+4
+  google_mlkit_text_recognition: ^0.4.0
+  permission_handler: ^10.2.0
+  image_picker: ^1.0.2
+  image_cropper: ^5.0.0
+  flutter_spinkit: ^5.2.0
+
 
 
 
